--- a/style.css
+++ b/style.css
@@ -39,6 +39,11 @@ body{
 	font-family: "TT Lakes Regular";
 	font-size: 14px;
 	color: #1B1C21;
+	background-color: rgba(248, 248, 248, 1);
+;
+}
+
+.header{
 	background-color: rgba(255, 255, 255, 1);
 }
 
@@ -115,12 +120,10 @@ position: relative;
 }
 
 .container__services{
+	padding: 0 0 0 16px;
 	margin: 24px 0 5px 0;
 }
 
-.services-block_sizes{
-	padding: 0 0 0px 5px;
-}
 .services__title{
 	font-family: "TT Lakes Bold";
 	font-size: 28px;
@@ -128,7 +131,8 @@ position: relative;
 }
 .services__title::before{
 	content: '';
-	margin-right: 10px;
+	margin-left: -18px;
+	margin-right: 12px;
 	border-left: 4px solid #41F6D7;
 }
 
@@ -140,9 +144,7 @@ position: relative;
 .services-block::-webkit-scrollbar{
 	width: 0;
 }
-.services-block__item{
-	margin-right: 5px;
-}
+
 .services-block__link{
 	font-size: 16px;
 	line-height: 1.5;
@@ -160,85 +162,45 @@ position: relative;
 .service__description{
 	display: none;
 }
-.services-block__description{
-	margin: 0 0 16px 0;
-}
-.services-block__text:nth-of-type(2){
+
+.description-block__text:nth-of-type(2){
 	display: none;
 }
-.services-block__hide{
+.description-block__hide{
 	display: none;
 }
-.services-block__text{
+.description-block__text{
 	letter-spacing: 0.2px;
 	line-height: 1.29;
 	margin-bottom: 14px;
 	font-size: 14px;
 }
-.services-block__open{
-	display: flex;
-	align-items: center;
+.description-block_idents{
 	margin-bottom: 16px;
 }
 
-.services-block__checkbox {
-	opacity: 0;
-	position: absolute;
-}
-.services-block__checkbox ~ .services-block__label::after{
-	content: 'Читать далее';
-	font-weight: 600;
-}
-.services-block__checkbox:checked ~ .services-block__label::after{
-	content: 'Свернуть';
-	font-weight: 600;
-}
-.services-block__checkbox:checked ~ .services-block__text{
-	display: inline-block;
-}
-.services-block__checkbox:checked ~ .services-block__text > .services-block__hide  {
-	display: inline;
-}
-.services-block__label{
-	display: block;
+.description-block__btn{
+	font-family: "TT Lakes Medium";
+	border: none;
+	background-color: inherit;
 	position: relative;
 	padding: 0 0 0 32px;
+	cursor: pointer;
 }
-.services-block__label::before{
+.description-block__btn::before{
 	position: absolute;
 	content: '';
 	display: block;
 	background: url('./img/320/expand.svg') no-repeat;
 	width: 24px;
 	height: 24px;
-	top: -3px;
+	top: -4px;
 	left: 0;	
 	transform: rotate(0deg);
 	transition: 0.5s;
 }
-.services-block__checkbox:checked ~ .services-block__label::before{
-	content: '';
-	transition: 0.5s;
-	transform: rotate(180deg);
-}
-.services-block__arrow{
-	cursor: pointer;
-	transition: 0.4s;
-}
-.services-block__arrow:active{
-	transform: rotate(180deg);
-	transition: 0.4s;
-}
 
-.services-block__button{
-	font-family: "TT Lakes Medium";
-	border: none;
-	background-color: inherit;
-}
-.services-block__button:hover{
-	color: #7E7E82;
-	transition: 0.3s;
-}
+
 .container__description{
 	padding: 0 0 0 16px;
 }
@@ -249,9 +211,7 @@ position: relative;
 }
 
 @media (min-width: 768px) { 
-	.container{
-		padding: 0 10px;
-	}
+
 	.container__menu{
 		padding: 24px 0 24px 24px;
 	}
@@ -275,16 +235,19 @@ position: relative;
 	.service__profile{
 		display: inline-block;
 	}
+	.description-block_idents{
+		padding: 0 55px 0 0;
+	}
 	.service__link:nth-child(3){
 		padding-right: 42px;
 	}
-	.services-block__text:nth-of-type(2){
+	.description-block__text:nth-of-type(2){
 		display: block;
 	}
 	.container__description{
-		padding: 0 38px 0 24px;
+		padding: 0 0px 0 24px;
 	}
-	.services-block__hide{
+	.description-block__hide{
 		display: none;
 	}
 	.description{
@@ -297,15 +260,18 @@ position: relative;
 
 	.services__title::before{
 	content: '';
+	margin-left: -22px;
 	margin-right: 20px;
 	}
-	.services-block_sizes{
-		padding: 0 0 0px 15px;
+	.container__services{    
+		padding: 0 0 0 24px;
+		margin: 24px 0 10px 0;
 	}
+
 	.description_sizes{
 		padding: 0 24px;
 	}
-	.description-block__picture{
+	.description-picture{
 		flex: 0 1 50%;
 	}
 	.description-block__img{
@@ -319,8 +285,7 @@ position: relative;
 		height: 10px;
 	}
 	.container{
-		max-width: 1140px;
-		padding: 0 10px;
+		max-width: 1120px;
 	}
 	.header-block{
 		justify-content: end;
@@ -335,7 +300,7 @@ position: relative;
 	.service__before{
 		display: none;
 	}
-	.services-block__text:nth-of-type(2){
+	.description-block__text:nth-of-type(2){
 		display: block;
 	}
 	.service__call,
@@ -343,11 +308,11 @@ position: relative;
 	.service__profile{
 		display:none;
 	}
-	.services-block__hide{
+	.description-block__hide{
 		display: inline;
 	}
 	.container__services{    
-		
+		padding: 0 0 0 30px;
 		margin: 24px 0 15px 0;
 	}
 	.service__block{
@@ -364,24 +329,23 @@ position: relative;
 	.services-block{
 		justify-content: space-between;
 		flex-wrap: wrap;
-		overflow-x: none;
+		overflow-x: hidden;
 	}
 	.service__description:hover{
 		color: #7E7E82;
 		transition: 0.3s;
 	}
 
-	.services-block__text{
+	.description-block__text{
 		max-width: 490px;
 	}
 
 	.services__title::before{
 	content: '';
+	margin-left: -30px;
 	margin-right: 30px;
 	}
-	.services-block_sizes{
-		padding: 0 0px 0px 25px;
-	}
+
 	.container__description{
 		padding: 0 0 0 34px;
 	}
