--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ body{
 	font-size: 14px;
 	color: #1B1C21;
 	background-color: rgba(248, 248, 248, 1);
-;
 }
 
 .header{
@@ -49,18 +48,16 @@ body{
 
 .container{
 	margin: 0 auto;
-	padding: 0 5px;
+	padding: 0px 16px;
 }
 
-.header-block{
+.header__inner{
+	height: 88px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between; 
 }
-.container__menu{
-	height: 88px;
-	padding: 24px 16px;
-}
+
 .logo{
 	position: relative;
 	padding: 0 0 0 16px;
@@ -115,13 +112,11 @@ body{
 }
 
 .service__before{
-position: relative;
-
+	position: relative;
 }
-
-.container__services{
-	padding: 0 0 0 16px;
-	margin: 24px 0 5px 0;
+.main__container:first-of-type{
+	padding-right: 16px;
+	padding-left: 16px;
 }
 
 .services__title{
@@ -131,7 +126,7 @@ position: relative;
 }
 .services__title::before{
 	content: '';
-	margin-left: -18px;
+	margin-left: -16px;
 	margin-right: 12px;
 	border-left: 4px solid #41F6D7;
 }
@@ -152,6 +147,7 @@ position: relative;
 	padding: 8px 20px;
 	display: block;
 	white-space: nowrap;
+	letter-spacing: -0.2px;
 }
 .services-block__link:hover,
 .services-block__link:focus{
@@ -159,8 +155,12 @@ position: relative;
 	border-radius: 6px;
 	padding: 6px 18px;
 }
-.service__description{
-	display: none;
+
+.description-block__text{
+	letter-spacing: 0.2px;
+	line-height: 1.29;
+	margin-bottom: 14px;
+	font-size: 14px;
 }
 
 .description-block__text:nth-of-type(2){
@@ -169,14 +169,8 @@ position: relative;
 .description-block__hide{
 	display: none;
 }
-.description-block__text{
-	letter-spacing: 0.2px;
-	line-height: 1.29;
-	margin-bottom: 14px;
-	font-size: 14px;
-}
-.description-block_idents{
-	margin-bottom: 16px;
+.service__description{
+	display: none;
 }
 
 .description-block__btn{
@@ -186,6 +180,7 @@ position: relative;
 	position: relative;
 	padding: 0 0 0 32px;
 	cursor: pointer;
+	margin-bottom: 16px;
 }
 .description-block__btn::before{
 	position: absolute;
@@ -200,10 +195,6 @@ position: relative;
 	transition: 0.5s;
 }
 
-
-.container__description{
-	padding: 0 0 0 16px;
-}
 .description-block__img{
 	width: 100%;
 	height: 100%;
@@ -211,9 +202,8 @@ position: relative;
 }
 
 @media (min-width: 768px) { 
-
-	.container__menu{
-		padding: 24px 0 24px 24px;
+	.container{
+		padding: 0 24px;
 	}
 
 	.logo{
@@ -230,23 +220,34 @@ position: relative;
 		content: '';
 		border-right: 2px solid rgba(234, 234, 234, 1);
 	}
+
+	.main__inner{
+		margin: 24px 0 0 0;
+	}
 	.service__call,
 	.service__chat,
 	.service__profile{
 		display: inline-block;
 	}
-	.description-block_idents{
-		padding: 0 55px 0 0;
-	}
+	
 	.service__link:nth-child(3){
 		padding-right: 42px;
+	}
+
+	.main__container:first-of-type{
+		padding-left: 24px;
+		padding-right: 0;
+	}
+	.main__container:last-of-type{
+		padding-right: 24px;
+	}
+	.description-block__text{
+		max-width: calc(100% - 13%);
 	}
 	.description-block__text:nth-of-type(2){
 		display: block;
 	}
-	.container__description{
-		padding: 0 0px 0 24px;
-	}
+
 	.description-block__hide{
 		display: none;
 	}
@@ -257,48 +258,71 @@ position: relative;
 	.description-block{
 		flex: 0 1 50%;
 	}
-
+	.services-block{
+		margin-bottom: 5px;
+	}
 	.services__title::before{
 	content: '';
-	margin-left: -22px;
+	margin-left: -24px;
 	margin-right: 20px;
 	}
-	.container__services{    
-		padding: 0 0 0 24px;
-		margin: 24px 0 10px 0;
-	}
 
-	.description_sizes{
-		padding: 0 24px;
-	}
 	.description-picture{
 		flex: 0 1 50%;
 	}
 	.description-block__img{
 		width: 100%;
-		height: 100%;
+		height: 100%;    
 	}
+	.service__link--border--after{
+		position: relative;
+	}
+	.service__link--border--after::after{
+	position: absolute;
+   top: 7px;
+   right: 20px;
+   height: 32px;
+   content: '';
+   border-left: 2px solid rgba(234, 234, 234, 1);
+}
 }
 
 @media (min-width: 1120px) { 
 	.header{
-		height: 10px;
+		height: 0px;
 	}
 	.container{
 		max-width: 1120px;
+		padding: 0 32px;
 	}
-	.header-block{
+	.header__inner{
 		justify-content: end;
+		transform: translateY(15px);
 	}
-	.container__menu{
-		padding: 0;
-		transform: translateY(11px);
-	}
+
 	.menu{
+		display: none;
+	}
+	.main__inner{
+		margin: 40px 0 0 0;
+	}
+
+	.main__container:first-of-type{
+		padding-left: 32px;
+		padding-right: 0;
+	}
+	.main__container:last-of-type{
+		padding-right: 32px;
+	}
+	.service__link--border--after::after{
 		display: none;
 	}
 	.service__before{
 		display: none;
+	}
+	.description{
+		margin: 0 auto;
+		max-width: 1120px;
 	}
 	.description-block__text:nth-of-type(2){
 		display: block;
@@ -311,10 +335,7 @@ position: relative;
 	.description-block__hide{
 		display: inline;
 	}
-	.container__services{    
-		padding: 0 0 0 30px;
-		margin: 24px 0 15px 0;
-	}
+
 	.service__block{
 		display: flex;
 		align-items: center;
@@ -342,13 +363,11 @@ position: relative;
 
 	.services__title::before{
 	content: '';
-	margin-left: -30px;
+	margin-left: -32px;
 	margin-right: 30px;
 	}
 
-	.container__description{
-		padding: 0 0 0 34px;
-	}
+
 	.description-block__img{
 		max-width: 532px;
 	}
